<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/requestUserNameTV"
        android:layout_width="200dp"
        android:maxLines="1"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/borrow_list"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/lendingBookTitle"
        app:layout_constraintEnd_toStartOf="@+id/requestUserAvatar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lendingBookTitle"
        android:layout_height="wrap_content"
        android:text="@string/bookworm_home"
        android:textSize="16sp"
        android:layout_width="200dp"
        android:maxLines="2"
        app:layout_constraintBottom_toTopOf="@+id/lendingBookAuthor"
        app:layout_constraintEnd_toEndOf="@+id/requestUserNameTV"
        app:layout_constraintStart_toStartOf="@+id/requestUserNameTV"
        app:layout_constraintTop_toBottomOf="@+id/requestUserNameTV" />

    <TextView
        android:layout_width="200dp"
        android:maxLines="2"
        android:id="@+id/lendingBookAuthor"
        android:layout_height="wrap_content"
        android:text="@string/bookworm_home"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bookButton"
        app:layout_constraintEnd_toEndOf="@+id/lendingBookTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/lendingBookTitle"
        app:layout_constraintTop_toBottomOf="@+id/lendingBookTitle" />

    <Button
        android:id="@+id/bookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="72dp"
        android:backgroundTint="@color/white"
        android:text="@string/to_book"
        android:textColor="@color/primary_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/requestUserAvatar"
        app:layout_constraintTop_toBottomOf="@+id/lendingBookAuthor" />

    <ImageView
        android:id="@+id/requestUserAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/default_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/requestUserNameTV"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lended_since"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/requestUserAvatar"
        app:layout_constraintStart_toStartOf="@+id/requestUserAvatar"
        app:layout_constraintTop_toBottomOf="@+id/requestUserAvatar" />

    <TextView
        android:id="@+id/lending_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_date"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>