<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_centerHorizontal="true">
    <FrameLayout
        android:id="@+id/flToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/userNameRequestDetailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/borrow_list"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bookRequestIV"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/borrow_list_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameRequestDetailTV" />

    <TextView
        android:id="@+id/wantsToTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/wants_to_borrow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookRequestIV" />

    <TextView
        android:id="@+id/bookTitleRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bookworm_home"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wantsToTV" />

    <TextView
        android:id="@+id/bookAuthorRequestTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borrow_list"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookTitleRequest" />

    <Button
        android:id="@+id/toBookButtonRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/to_book"
        android:textColor="@color/primary_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookAuthorRequestTV" />

    <ImageView
        android:id="@+id/acceptBookIV"
        android:layout_width="100dp"
        android:layout_height="121dp"
        android:src="@drawable/accept_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/declineBookIV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toBookButtonRequest" />

    <ImageView
        android:id="@+id/declineBookIV"
        android:layout_width="100dp"
        android:layout_height="121dp"
        android:src="@drawable/decline_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/acceptBookIV"
        app:layout_constraintTop_toBottomOf="@+id/toBookButtonRequest" />

    <TextView
        android:id="@+id/declineBookTV"
        android:layout_width="73dp"
        android:layout_height="31dp"
        android:text="@string/decline"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/declineBookIV"
        app:layout_constraintStart_toStartOf="@+id/declineBookIV"
        app:layout_constraintTop_toBottomOf="@+id/declineBookIV" />

    <TextView
        android:id="@+id/acceptBookTV"
        android:layout_width="73dp"
        android:layout_height="31dp"
        android:text="@string/accept"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/acceptBookIV"
        app:layout_constraintStart_toStartOf="@+id/acceptBookIV"
        app:layout_constraintTop_toBottomOf="@+id/acceptBookIV" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</LinearLayout>