<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:padding="20dp">

    <FrameLayout
        android:id="@+id/flToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/wishToReadTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/wish_to_read"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flToolbar" />

    <ImageView
        android:id="@+id/addIcon"
        android:layout_marginTop="20dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/addbook_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flToolbar" />

    <TextView
        android:id="@+id/noWishToReadTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/no_wish_to_read"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wishToReadTV" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wishToReadRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wishToReadTV" />

    <TextView
        android:id="@+id/readingTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reading"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wishToReadRV" />

    <TextView
        android:id="@+id/noReadingTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/no_reading"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readingTV" />

    <ImageView
        android:id="@+id/addIcon1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/addbook_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wishToReadRV" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/readingRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readingTV" />


    <TextView
        android:id="@+id/finishedReadingTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finished_reading"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readingRV" />

    <TextView
        android:id="@+id/noFinishedReadingTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/no_finished_reading"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finishedReadingTV" />

    <ImageView
        android:id="@+id/addIcon2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/addbook_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readingRV" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/finishedReadingRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:foregroundGravity="center"
        app:layout_constraintTop_toBottomOf="@+id/finishedReadingTV"
        tools:layout_editor_absoluteX="-31dp" />
</androidx.constraintlayout.widget.ConstraintLayout>