<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/hookIV"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/added_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scanCompleteTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:text="@string/scan_complete"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hookIV" />

    <ImageView
        android:id="@+id/showIV"
        android:layout_width="100dp"
        android:layout_height="121dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/show_icon"
        app:layout_constraintEnd_toStartOf="@+id/moreIV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanCompleteTV" />

    <ImageView
        android:id="@+id/moreIV"
        android:layout_width="100dp"
        android:layout_height="121dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/addbook_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/showIV"
        app:layout_constraintTop_toBottomOf="@+id/scanCompleteTV" />

    <TextView
        android:id="@+id/showTV"
        android:layout_width="73dp"
        android:layout_height="31dp"
        android:text="@string/show"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/moreTV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showIV" />

    <TextView
        android:id="@+id/moreTV"
        android:layout_width="73dp"
        android:layout_height="31dp"
        android:text="@string/more"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/showTV"
        app:layout_constraintTop_toBottomOf="@+id/moreIV" />
</androidx.constraintlayout.widget.ConstraintLayout>